--- a/src/styles/FloatingCard.module.css
+++ b/src/styles/FloatingCard.module.css
@@ -73,6 +73,7 @@
     box-shadow: none;
     border-left: none;
     border-right: none;
+    z-index: 1;
   }
 
   .main {
